[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oack"
version = "0.2.0"
description = "Official Python client for the Oack monitoring API"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
authors = [{ name = "Oack", email = "support@oack.io" }]
keywords = ["oack", "monitoring", "uptime", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://oack.io"
Documentation = "https://docs.oack.io"
Repository = "https://github.com/oackio/oack-python"
Changelog = "https://github.com/oackio/oack-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/oack"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (no print in library code)
    "PTH",   # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["valid-type", "type-arg", "no-any-return", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "mypy>=1.10",
    "ruff>=0.8",
]
